feat: associate a controller with a plant-group instead a plant #60
